[tool.poetry]
name = "conex"
version = "0.1.0"
description = ""
authors = ["Ralph Schmieder <ralph.schmieder@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
connexion = {version = "*", extras = ["swagger-ui"]}

aiohttp = "^3.8.1"
aiohttp-jinja2 = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
